# GD32_I2C_CAN_FIRMWARE

./: .gitignore  CMakeLists.txt  GD32_I2C_CAN.uvoptx  GD32_I2C_CAN.uvprojx  armcm4.cmake  gd32e10x.ld  readme.md
Application/: main.c
Docs/: Readme.txt
GD32C10x/: CMakeLists.txt
GD32C10x-Peripherals/: can.c  i2c.c  i2c.h  lgi_basic.c  lgi_basic.h
GD32C10x/CMSIS/: system_gd32c10x.c
inc/: can.h  dual_dfs.h  i2c.h  systick.h
src/: CMakeLists.txt  gd32c10x_it.c  i2c.c  main.c  systick.c
